[package]
name = "wordroute"
version = "0.1.0"
edition = "2021"
default-run = "build-puzzle"

[[bin]]
name = "build-puzzle"
path = "src/build_puzzle.rs"

[[bin]]
name = "extract-dictionary"
path = "src/extract-dictionary.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
