[package]
name = "wordroute"
version = "0.1.0"
edition = "2021"
default-run = "build-puzzle"
license = "GPL-3.0-or-later"
description = "A word search game"
repository = "https://github.com/bpeel/wordroute"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "build-puzzle"
path = "src/build_puzzle.rs"

[[bin]]
name = "extract-dictionary"
path = "src/extract-dictionary.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
package = "wasm-bindgen"
version = "0.2.87"

[target."cfg(target_arch = \"wasm32\")".dependencies.web_sys]
package = "web-sys"
version = "0.3.64"
features = [
         "Element",
         "Window",
         "console",
         "CssStyleDeclaration",
         "Document",
         "HtmlDocument",
         "Response",
         "HtmlElement",
         "SvgElement",
         "Text",
         "RequestInit",
         "RequestCache",
         "KeyboardEvent",
]

[target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
package = "js-sys"
version = "0.3.64"

[target."cfg(target_arch = \"wasm32\")".dependencies.console_error_panic_hook]
version = "0.1.7"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.clap]
version = "4.5.4"
features = ["derive"]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.serde]
version = "1.0.204"
features = ["derive"]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.serde_json]
version = "1.0.120"
